chore(all): làm sạch hệ thống, chỉnh sửa lại các lỗi style